<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/foto_profil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        android:src="@drawable/foto_profil" />

    <Button
        android:id="@+id/button_detail_lengkap"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:text="@string/button_info_lengkap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto_profil"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_detail_lengkap"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/NIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jurusan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NIM"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jurusan"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/akuninstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_detail_lengkap"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/akungithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/akuninstagram"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/akunlinkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/akungithub"
        app:layout_constraintVertical_bias="0.131" />
</androidx.constraintlayout.widget.ConstraintLayout>