<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/foto_detail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="Foto Profil"
            android:src="@drawable/foto_profil_kedua"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nama_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/foto_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nim_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/nama_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/jurusan_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jurusan"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/nim_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/semester_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/jurusan_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/hobi_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hobi"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/semester_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/cita_cita_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cita_cita"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/hobi_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/biografi_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/biografi"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintTop_toBottomOf="@id/cita_cita_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
